# hsm-dcu-daemon

./: .default-version  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  HACKING.md  INSTALL.md  INSTALL_AM62X_SK.md  KNOWN_ISSUES.md  NOTICE  README.md  TODO.md  configure.ac  docker-compose.yml  setup_AM62x_filesystem.sh  ti_wisun_commands.md
.github/workflows/: rust.yml
am64x-setup/: README.md
am64x-setup/boot-setup/: start-ti-wisun-webapp.sh
coap-client-scripts/: run_coap_get.sh  run_coap_put.sh
crates/dcu-daemon/: Cargo.toml
crates/dcu-daemon/src/: config.rs  control_interface.rs  dataset.rs  error.rs  lib.rs  main.rs
crates/dcu-daemon/src/dispatcher/: data_pump.rs  events.rs  mod.rs
crates/dcu-daemon/src/instance/: base.rs  mod.rs
crates/dcu-daemon/src/tasks/: backoff.rs  form.rs  join.rs  joiner_commission.rs  mod.rs  queue.rs  send_command.rs
crates/dcu-daemon/tests/: integration.rs
crates/dcu-daemon/tests/common/: daemon_test.rs
crates/dcu-dbus/: Cargo.toml
crates/dcu-dbus/scripts/: run-bus-tests.sh
crates/dcu-dbus/src/: base_interface.rs  commands.rs  interface.rs  lib.rs  properties.rs  server.rs  signals.rs  types.rs
crates/dcu-mock/: Cargo.toml
crates/dcu-mock/src/: builder.rs  config.rs  failure.rs  lib.rs  mock_ncp.rs  pty_transport.rs  scenarios.rs  topology.rs
crates/dcu-serial/: Cargo.toml
crates/dcu-serial/src/: dispatch.rs  error.rs  framing.rs  lib.rs  pty.rs  socket.rs  system.rs  system_ffi.rs  tcp.rs  termios.rs  transport.rs  uart.rs
crates/dcu-serial/tests/: fd_transport.rs
crates/dcu-tun/: Cargo.toml
crates/dcu-tun/src/: device.rs  error.rs  ffi.rs  interface.rs  ioctl.rs  lib.rs  packet.rs  packet_matcher.rs
crates/dcu-tunnel-daemon/: Cargo.toml
crates/dcu-tunnel-daemon/src/: config.rs  control_interface.rs  dataset.rs  error.rs  firmware_upgrade.rs  lib.rs  lifecycle.rs  main.rs  ncp_gpio.rs  network_retain.rs  pcap.rs  pcap_ffi.rs
crates/dcu-tunnel-daemon/src/dispatcher/: mod.rs
crates/dcu-tunnel-daemon/src/instance/: addresses.rs  base.rs  mod.rs  property_handlers.rs  stat_collector.rs  tun_bridge.rs
crates/dcu-tunnel-daemon/src/tasks/: commissioner_ops.rs  join.rs  leave.rs  mod.rs  params.rs  payload.rs  peek.rs  scan.rs  sleep.rs  topology.rs
crates/dcu-tunnel-daemon/tests/common/: daemon_test.rs  mod.rs
crates/dcuctl/: Cargo.toml
crates/dcuctl/src/: dbus_client.rs  main.rs  property_parser.rs
crates/dcuctl/src/commands/: add_remove.rs  get.rs  help.rs  mod.rs  reset.rs  set.rs  status.rs
crates/spinel/: Cargo.toml
crates/wisun-types/: Cargo.toml
doc/: Makefile.am  wfanctl.1  wpantund.1
doc/rust-porting/: COVERAGE-GAP-ANALYSIS.md  README.md  phase-1A-wisun-types.md  phase-1B-spinel.md  phase-1C-dcu-tun-implementation-plan.md  phase-1C-dcu-tun.md  phase-1D-dcu-serial.md  phase-2A-dcu-dbus.md  phase-2B-dcuctl.md  (+5 more)
etc/: Dockerfile
external-servers/: README.md  docker-compose-arm.yml  docker-compose.yml
linux-host/: .gitignore  AM62x_CROSS_COMPILE_README.md  CMakeLists.txt  CMakeSources.cmake  Dockerfile  README.md
linux-host/apps/border_router_nanostack_tirf/: CMakeLists.txt  application.c  border_router_host.cfg  borderrouter_ws.c  borderrouter_ws_cert.c  main.cpp  mbed_config_app.h  mbed_config_app_cert.h  ti_wisunfan_config.h  ti_wisunfan_features.h  ws_br_fan_cert_certificates.h
linux-host/apps/border_router_nanostack_tirf/cert/: ti_wisunfan_config_cert.h
linux-host/apps/border_router_nanostack_tirf/defines/: router.opts
linux-host/apps/router_node_nanostack_tirf/: CMakeLists.txt  advanced_config.h  application.c  main.cpp  mbed_config_app.h  mbedtls_wisun_config.h  router_node_host.cfg  ti_wisunfan_config.h  ti_wisunfan_features.h
linux-host/src/gateway_common/inc/: bitsnbits.h  compiler.h  compiler_gcc.h  compiler_microsoft.h  debug_helpers.h  fatal.h  fifo.h  hexline.h  hlos_specific.h  ini_file.h  log.h  mutex.h  npi_hdlc.h  rand_data.h  stream.h  stream_private.h  stream_socket.h  stream_uart.h  threads.h  ti_semaphore.h  timer.h  unix_fdrw.h  void_ptr.h
linux-host/src/gateway_common/linux/: linux_specific.c  linux_uart.c  npi_hdlc.c
linux-host/src/gateway_common/src/: debug_helpers.c  fatal.c  fifo.c  hexline.c  ini_file.c  log.c  log_ini.c  mutex.c  rand_data.c  stream_common.c  stream_file.c  stream_mem.c  stream_socket_client.c  stream_socket_ini.c  stream_socket_private.c  stream_socket_private.h  stream_socket_server.c  stream_uart_ini.c  threads.c  ti_semaphore.c  timer.c  timer_cb.c  unix_fdrw.c
linux-host/src/ini_parser/: CfgParser.cpp  CfgParser.hpp  DhcpSection.cpp  DhcpSection.hpp  IniFile.cpp  IniFile.hpp  IniSection.cpp  IniSection.hpp  NcpSection.cpp  NcpSection.hpp  README.md  RadiusSection.cpp  RadiusSection.hpp  UartSection.cpp  UartSection.hpp
linux-host/src/mbed_config/ws_border_router/: mbed_config.h
linux-host/src/mbed_config/ws_router/: mbed_config.h
linux-host/src/mt_interface/api/inc/: api_mac.h  api_mac_linux.h  mt_msg.h  mt_msg_dbg.h
linux-host/src/mt_interface/api/src/: api_mac.c  mt_msg.c  mt_msg_dbg_core.c  mt_msg_dbg_load.c  mt_msg_ini.c
linux-host/src/nv/: nv_linux.c  nv_linux.h  nvintf.h
linux-host/src/platform_layer_port/mbednanostack2linux/nanostack/nanostack-hal-mbed-cmsis-rtos/: arm_hal_fhss_timer.c  arm_hal_interrupt.cpp  arm_hal_random.c  arm_hal_timer.cpp  arm_hal_timer_polling.cpp  linux_polling_timer.cpp  linux_polling_timer.hpp  ns_event_loop.c  ns_event_loop_mutex.c  ns_hal_init.cpp
linux-host/src/platform_layer_port/mbednanostack2linux/platform/: alarm.c  itm_private.h  mac_assert.h  misc.c  ns_trace.c  ns_trace.h
linux-host/src/platform_layer_port/mbedtls2linux/mbedtls/mbed-crypto/src/: crypto_misc.c
linux-host/src/platform_layer_port/ncp_interface2linux/: ncp_socket.cpp  ncp_socket.hpp
packaging/: README.md  com.nestlabs.WPANTunnelDriver.conf.in  dcu-daemon.service  install.sh  wpantund.conf.hardware.example
scripts/: property-inventory.sh  property-keys.txt  run-dbus-tests.sh  rust-handled-keys.txt
src/: Makefile.am
ti-wisun-webapp/: README.md
wisun-types/: Cargo.toml
(+138 files in other folders)
