[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = "1"
nix = "0.29"
zbus = { version = "4", features = ["tokio"] }
hex = "0.4"
serde_json = "1"
ipnet = "2"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
