[package]
name = "dcu-dbus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
zbus = { version = "4", features = ["tokio"] }
zvariant = { version = "4", features = ["enumflags2"] }
wisun-types = { path = "../wisun-types" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
futures = "0.3"

[lints]
workspace = true
