[package]
name = "dcu-dbus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
zbus = { version = "4", features = ["tokio"] }
zvariant = { version = "4", features = ["enumflags2"] }
wisun-types = { path = "../wisun-types" }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "net", "rt-multi-thread"] }
futures = "0.3"

[lints]
workspace = true
