[package]
name = "dcu-serial"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
mock-pty = ["dep:portable-pty"]

[dependencies]
spinel = { path = "../spinel" }
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros"] }
tokio-serial = "5"
tokio-util = { version = "0.7", features = ["io"] }
portable-pty = { version = "0.8", optional = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
