[package]
name = "dcu-serial"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
mock-pty = ["dep:portable-pty"]

[dependencies]
spinel = { path = "../spinel" }
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "time"] }
tokio-serial = "5"
portable-pty = { version = "0.8", optional = true }
nix = { workspace = true, features = ["fs", "process", "term", "signal"] }
libc = "0.2"
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
