[package]
name = "dcu-tun"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["net", "io-util"] }
nix = { version = "0.29", features = ["net", "socket"] }
libc = "0.2"
ipnet = "2"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

# dcu-tun is the ioctl-exempt crate (AGENTS.md). Override the workspace
# `unsafe_code = "deny"` to warn; keep everything else denied.
[lints.rust]
unsafe_code = "allow"
warnings = "deny"

[lints.clippy]
all = "deny"
