[package]
name = "dcu-tun"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }
nix = { workspace = true, features = ["net", "socket"] }
libc = "0.2"
ipnet = "2"
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

# dcu-tun is the ioctl-exempt crate (AGENTS.md). Override the workspace
# `unsafe_code = "deny"` to allow; keep everything else denied.
[lints.rust]
unsafe_code = "allow"
warnings = "deny"

[lints.clippy]
all = "deny"
