[package]
name = "dcu-tun"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }
nix = { workspace = true, features = ["net", "socket"] }
libc = "0.2"
ipnet = "2"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
