[package]
name = "dcu-tunnel-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# Hoisted deps from workspace root.
[dependencies]
wisun-types = { path = "../wisun-types" }
spinel = { path = "../spinel" }
dcu-tun = { path = "../dcu-tun" }
dcu-serial = { path = "../dcu-serial" }
dcu-dbus = { path = "../dcu-dbus" }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tokio-util = { version = "0.7", features = ["time"] }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
shell-words = "1"
zbus = { workspace = true }
hex = { workspace = true }
ipnet = { workspace = true }
libc = "0.2"
nix = { workspace = true, features = ["fs", "process", "user"] }

[features]
test-util = []

[[bin]]
name = "dcutund"
path = "src/main.rs"

[[test]]
name = "integration"
required-features = ["test-util"]

[dev-dependencies]
dcu-mock = { path = "../dcu-mock" }
tempfile = "3"

[lints]
workspace = true
