[package]
name = "dcuctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
wisun-types = { path = "../wisun-types" }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
zbus = "4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
